--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -284,7 +284,7 @@ $font-sizes: (
 );
 
 $headings-margin-bottom: 0.5rem;
-$headings-font-family: "Heebo", sans-serif;
+$headings-font-family: sans-serif;
 $headings-font-weight: $font-weight-bold;
 $headings-line-height: $line-height-sm;
 $headings-color: var(--#{$prefix}gray-800);
