--- a/app/views/steps/_editor_sidebars.html.erb
+++ b/app/views/steps/_editor_sidebars.html.erb
@@ -729,12 +729,17 @@
           </div>
         </div>
 
-        <div>Font size</div>
-        <div class="input-group" style="display: flex; align-items:center;">
-          <input class="form-input width-slider mr-2" type="range" id="headline-font-slider" min="8" max="100" step="2"
-            value="32" style="width: 70%;">
-          <input type="number" min="8" max="100" name="element-name" id="headline-font-value"
-            class="form-control my-2 input-panel" value="32">
+        <div class="row my-3 align-items-center">
+          <div class="col-5">
+            <div>
+              <label for="headline-font-slider">Font Size</label>
+            </div>
+          </div>
+          <div class="col-7 align-items-center">
+            <div class="form-element">
+              <input class="form-input" type="range" id="headline-font-slider" min="12" max="100" step="2">
+            </div>
+          </div>
         </div>
 
         <div class="border-options">
