--- a/app/views/steps/show.html.erb
+++ b/app/views/steps/show.html.erb
@@ -1,143 +1,13 @@
 
 <% content_for :head do %>
 
+  <%= stylesheet_link_tag 'preview', media: 'all', 'data-turbo-track': 'reload' %>
+
 <style>
-.elButton {
-    padding: 13px 35px;
-    text-decoration: none; /* Remove underline by default */
-}
-
-.elButton:hover {
-    text-decoration: none; /* Remove underline on hover */
-}
-
-
-.elInput.elInputBR5 {
-    border-radius: 5px !important;
-}
-
-.elInputIRight {
-    background-position: 97%;
-}
-.elInputBR5 {
-    border-radius: 5px;
-}
-.elInputBG1 {
-    background-color: #fff;
-}
-.elInputStyl0 {
-    border: 1px solid rgba(0,0,0,0.2);
-}
-.elInput100 {
-    width: 100%;
-}
-.elInputMid {
-    font-size: 16px;
-    padding: 12px 18px;
-}
-.elInput {
-    outline: none !important;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-.ceoinput, .ceoinput>* {
-    border: 1px solid #b4becd;
-    border-top-color: #b0baca;
-    border-bottom-color: #d3d9e2;
-    box-shadow: inset 0 1px 2px rgba(130,137,150,0.23), 0 1px 0 rgba(255,255,255,0.95) !important;
-    border-radius: 3px !important;
-}
-.elAlign_left {
-    text-align: left;
-}
-
-
-    .realcountdown {
-      font-size: 24px;
-      padding-top: 16px;
-      padding-bottom: 6px;
-      border-radius: 5px;
-    }
-
-
-      .timer {
-          text-align: right;
-          padding-right:10px;
-      }
-
-      .timer-number {
-          font-size: 24px;
-            text-align: left;
-      }
-
-      .timer-word {
-          font-size: 12px;
-          text-align: left;
-      }
-
-/* popup */
-
-.popup-container {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  z-index: 999;
-  justify-content: center;
-  align-items: center;
-}
-
-.popup-content {
-  background-color: #fff;
-  padding: 30px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-}
-.popup-content {
-  position: relative;
-}
-
-.popup-close {
-  position: absolute;
-  top: 6px;
-  right: 6px;
-  cursor: pointer;
-  font-size: 22px;
-  color: #000; /* Change the color to your preference */
-}
-
-.popup-close:hover {
-  color: #ff0000; /* Change the hover color to your preference */
-}
-
-#new_contact {
-    opacity: 0.1;
-  /*display: none;*/
-
-}
-
-.row-section {
-    width: 100%;
-    position: relative;
-    display: flex;
-}
-
-.col-div {
-    min-height: 210px;
-    position: relative;
-    padding: 20px;
-}
-
-/*   not sure if I will use this padding but it seems as a good minimum padding between elements 	*/
-.draggable {
-    padding: 1rem;
-}
-
-    </style>
+  body{
+    background-color: <%= @step.background %>; /* This will set the background color from the database */
+  }
+</style>
 
 <% end %>
 
